<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddManagerActivity">

    <ImageView
            android:id="@+id/imgBack"
            android:contentDescription="@string/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_arrow_back_24dp"/>

    <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true">

        <ImageView
                android:layout_width="@dimen/dimen_210dp"
                android:layout_height="@dimen/dimen_167dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:contentDescription="@string/textview_add_new_employee"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:layout_marginRight="@dimen/dimen_16dp"
                android:background="@drawable/btn_bg"
                android:orientation="vertical"
                android:paddingEnd="@dimen/dimen_16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    android:text="@string/textview_add_new_employee"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_28sp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtFullName"
                    android:hint="@string/edittext_hint_full_name"
                    android:textSize="@dimen/text_size_18sp"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12dp"
                    android:drawableStart="@drawable/user_24"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorRed"
                    app:met_singleLineEllipsis="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtEmail"
                    android:hint="@string/edittext_hint_email"
                    android:textSize="@dimen/text_size_18sp"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12dp"
                    android:drawableStart="@drawable/email_24"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorRed"
                    app:met_singleLineEllipsis="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtPassword"
                    android:hint="@string/edittext_hint_password"
                    android:textSize="@dimen/text_size_18sp"
                    android:inputType="textPassword"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12dp"
                    android:drawableStart="@drawable/password_24"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorRed"
                    app:met_singleLineEllipsis="true"/>

            <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="@dimen/dimen_210dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:background="@drawable/btn_login"
                    android:text="@string/button_register"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_18sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
