<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.UpdateFoodActivity">

    <ImageView
            android:id="@+id/imgNewImage"
            android:src="@drawable/logo"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="@dimen/dimen_300dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewFoodName"
            android:hint="@string/edittext_name_of_the_food"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorOrange"
            app:met_singleLineEllipsis="true"
            app:layout_constraintTop_toBottomOf="@+id/imgNewImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewPrice"
            android:hint="@string/edittext_new_price"
            android:maxLength="8"
            android:inputType="number"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorOrange"
            app:met_singleLineEllipsis="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNewFoodName"/>

    <Button
            android:id="@+id/btnConfirm"
            android:text="@string/button_confirm"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNewPrice"/>

    <Button
            android:id="@+id/btnCancel"
            android:text="@string/button_cancel"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNewPrice"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
